--- a/index.html
+++ b/index.html
@@ -91,8 +91,41 @@
         </div>
         </section>
     </main>
-    <footer>
+    <footer class="foot">
 
+        <div class="foot-div">
+            <img class="foot-img" src="logo/logo-light.png" alt="">
+            <p class="f-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur, esse?</p>
+            <p class="f-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur, esse?</p>
+            <p class="f-p">Lorem ipsum dolor sit.</p>
+        </div>
+        <div class="foot-div">
+            <h4>Usefull links</h4>
+            <ul>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Contacts</a></li>
+                <li><a href="#">Links & Article</a></li>
+                <li><a href="#">Legal notice </a></li>
+            </ul>
+        </div>
+        <div class="foot-div">
+            <h4>Supports</h4>
+            <ul>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Parent Community</a></li>
+        </ul>
+        </div>
+        <div class="foot-div f-contact">
+            <h4>Contact Information</h4>
+            <ul class="f-ul">
+                <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, eligendi.</li>
+                <li><address>floot 40303 road usa</address></li>
+                <li>+39938838939</li>
+                <li><a href="#">mmdashrafull210@gmail.com</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
